<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/transitions_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WelcomeScreenActivity">


    <android.support.constraint.Guideline
        android:id="@+id/gif_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"/>

    <ImageView
        android:id="@+id/gif_image"
        android:layout_width="0dp"
        android:layout_height="@dimen/gif_height"
        android:src="@drawable/start_gif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/gif_guideline" />

    <TextView
        android:id="@+id/logo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/LogoTitle"
        android:gravity="center"
        android:layout_marginTop="@dimen/toolbar_height"
        android:layout_marginStart="@dimen/general_margin_dimen"
        android:layout_marginEnd="@dimen/general_margin_dimen"
        app:layout_constraintTop_toBottomOf="@id/gif_image"
        app:layout_constraintBottom_toTopOf="@id/lion_kon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/toolbar_title"
        android:alpha="0"/>

    <ImageView
        android:id="@+id/lion_kon"
        android:layout_width="@dimen/kon_height"
        android:layout_height="@dimen/kon_height"
        android:src="@drawable/kon_drawing_blue"
        android:layout_marginTop="@dimen/general_margin_dimen"
        app:layout_constraintTop_toBottomOf="@id/logo_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:alpha="0"/>

    <TextView
        android:id="@+id/continue_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BodyTextStyle"
        android:layout_marginTop="@dimen/login_prompt_dimen"
        android:layout_marginStart="@dimen/general_margin_dimen"
        android:layout_marginEnd="@dimen/general_margin_dimen"
        app:layout_constraintTop_toBottomOf="@id/lion_kon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:alpha="0"
        android:text="@string/welcome_start_editing"/>

    <TextView
        android:id="@+id/login_prompt_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/BodyTextStyle"
        android:layout_marginTop="@dimen/general_margin_dimen"
        android:layout_marginStart="@dimen/login_prompt_dimen"
        android:layout_marginEnd="@dimen/login_prompt_dimen"
        app:layout_constraintTop_toBottomOf="@id/logo_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:text="@string/login_prompt"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/instagram_login_button_welcome"
        android:layout_width="@dimen/button_width"
        android:layout_height="32dp"
        android:text="@string/instagram_title"
        android:background="@drawable/rounded_corner_button"
        android:backgroundTint="@color/colorInsta"
        android:alpha="0.8"
        android:layout_marginTop="32dp"
        android:drawableStart="@drawable/ic_instagram"
        style="@style/buttonStyle"
        app:layout_constraintTop_toBottomOf="@id/login_prompt_text"
        app:layout_constraintStart_toEndOf="parent"
        android:visibility="invisible" />

    <Button
        android:id="@+id/facebook_login_button_welcome"
        android:layout_width="@dimen/button_width"
        android:layout_height="32dp"
        android:text="@string/facebook_title"
        android:background="@drawable/rounded_corner_button"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_facebook_box"
        style="@style/buttonStyle"
        app:layout_constraintTop_toBottomOf="@id/instagram_login_button_welcome"
        app:layout_constraintStart_toEndOf="parent" />

    <TextView
        android:id="@+id/next_activity_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/BodyTextStyle"
        android:textSize="12sp"
        android:layout_marginTop="@dimen/return_text_bottom_margin"
        android:layout_marginStart="@dimen/login_prompt_dimen"
        android:layout_marginEnd="@dimen/login_prompt_dimen"
        app:layout_constraintTop_toBottomOf="@id/facebook_login_button_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:text="@string/continue_main_activity"
        android:alpha="0"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/lion_kon_2"
        android:layout_width="@dimen/kon_height"
        android:layout_height="@dimen/kon_height"
        android:src="@drawable/kon_drawing_blue"
        android:layout_marginTop="@dimen/general_margin_dimen"
        app:layout_constraintTop_toBottomOf="@id/next_activity_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/return_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/BodyTextStyle"
        android:textSize="12sp"
        android:layout_marginBottom="@dimen/return_text_bottom_margin"
        android:layout_marginStart="@dimen/login_prompt_dimen"
        android:layout_marginEnd="@dimen/login_prompt_dimen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:text="@string/return_to_gif"
        android:visibility="gone"/>
</android.support.constraint.ConstraintLayout>