<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_transitions_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:contentDescription="@string/return_content_description"
            android:id="@+id/return_selection_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_keyboard_backspace"
            android:background="@android:color/transparent"
            android:tint="@color/colorTextGray"
            android:visibility="gone"/>

        <ImageButton
            android:contentDescription="@string/return_content_description"
            android:id="@+id/log_in_return_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_keyboard_backspace"
            android:background="@android:color/transparent"
            android:tint="@color/colorTextGray"/>

        <TextView
            android:id="@+id/main_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_text"
            style="@style/ToolbarTitle"
            android:paddingStart="@dimen/general_margin_dimen"/>

        <TextView
            android:id="@+id/main_toolbar_next_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_Action"
            style="@style/ActionStyle"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/general_margin_dimen"/>
    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/main_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/selection_guideline_bottom">

        <FrameLayout
            android:id="@+id/selection_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/selected_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                tools:src="@tools:sample/avatars"/>
        </FrameLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

    <android.support.constraint.Guideline
        android:id="@+id/selection_guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@id/swipe_refresh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/select_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_info"
        android:fontFamily="@font/coming_soon_font"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/swipe_refresh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fire_emoji_button_container"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/thug_glasses"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_thug_glasses"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/swipe_refresh" />

    <LinearLayout
        android:id="@+id/fire_emoji_button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/swipe_refresh"
        app:layout_constraintStart_toEndOf="@+id/thug_glasses_button_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/general_margin_dimen"
        android:orientation="vertical"
        android:layout_marginEnd="@dimen/general_margin_dimen"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/fire_emoji_button_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_fire_emoji"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:duplicateParentState="true"/>

        <TextView
            android:id="@+id/fire_emoji_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fire_eyes_text"
            style="@style/BodyTextStyle"
            android:layout_marginTop="@dimen/general_margin_dimen"
            android:duplicateParentState="true"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar_fire"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/rounded_corner_button"
        android:backgroundTint="@color/colorBackgroundWhite"
        app:layout_constraintStart_toStartOf="@id/fire_emoji_button_container"
        android:elevation="4dp"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="@id/fire_emoji_button_container"
        app:layout_constraintTop_toTopOf="@id/fire_emoji_button_container"
        app:layout_constraintBottom_toBottomOf="@id/fire_emoji_button_container"/>

    <LinearLayout
        android:id="@+id/thug_glasses_button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/fire_emoji_button_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fire_emoji_button_container"
        android:orientation="vertical"
        android:layout_marginEnd="@dimen/general_margin_dimen"
        android:visibility="gone">

        <ImageView
            android:id="@+id/thug_glasses_button"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_thug_glasses"
            android:layout_marginEnd="@dimen/general_margin_dimen" />

        <TextView
            android:id="@+id/thug_glasses_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thug_life_text"
            android:layout_marginTop="@dimen/general_margin_dimen"
            style="@style/BodyTextStyle" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar_thug"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/rounded_corner_button"
        android:backgroundTint="@color/colorBackgroundWhite"
        app:layout_constraintStart_toStartOf="@id/thug_glasses_button_container"
        android:elevation="4dp"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="@id/thug_glasses_button_container"
        app:layout_constraintTop_toTopOf="@id/fire_emoji_button_container"
        app:layout_constraintBottom_toBottomOf="@id/thug_glasses_button_container"/>


</android.support.constraint.ConstraintLayout>